[tool.poetry]
name = "covid-19"
version = "0.1.0"
description = ""
authors = ["Daniele Trifirò <daniele.trifiro@illimity.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
matplotlib = "^3.2.0"
plotly = "^4.5.3"
"plotly.express" = "^0.4.1"
ipython = "^7.13.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
